# Aether_PoseidonDriver

./: CMakeLists.txt
components/ds18b20/: CMakeLists.txt  ds18b20.c  ds18b20.h
database/migrations/aether_core/: 003_add_device_external_id_to_device.sql
database/migrations/poseidon/: 005_add_description_to_sensor.sql  006_add_external_id_to_sensor.sql  007_create_table_rely_relay.sql  008_create_table_jcrs_job_cron_schedule.sql  009_create_table_jcrh_job_cron_history.sql
database/structure/: 004_create_role_poseidon_application.sql
documentation/: commands
main/: CMakeLists.txt  main.cpp
main/core/network/: debug_server.cpp  debug_server.hpp  sntp.hpp  wifi_service.cpp  wifi_service.hpp
main/poseidon/: poseidon_main.cpp  poseidon_main.hpp
main/poseidon/network/: tcp_service.cpp  tcp_service.hpp
main/poseidon/service/: relay_change.cpp  relay_change.hpp  sensor_read.cpp  sensor_read.hpp
